# NexusMQ

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
src/: CMakeLists.txt
src/broker/: CMakeLists.txt  consumer_group.cpp  consumer_group.hpp  credit_window.hpp  group_catalog.cpp  group_catalog.hpp  group_coordinator.cpp  group_coordinator.hpp  offset_manager.cpp  offset_manager.hpp  partition.cpp  partition.hpp  partition_base.hpp  partition_txn_index.cpp  partition_txn_index.hpp  producer_session.hpp  replicated_partition.cpp  replicated_partition.hpp  request_router.cpp  request_router.hpp  topic.hpp  topic_catalog.cpp  topic_catalog.hpp  topic_cluster.cpp  topic_cluster.hpp  topic_manager.cpp  topic_manager.hpp  transaction_coordinator.cpp  transaction_coordinator.hpp
src/client/: CMakeLists.txt  client.cpp  client.hpp  consumer.cpp  consumer.hpp  dead_letter.cpp  dead_letter.hpp  endpoint.hpp  producer.cpp  producer.hpp
src/cluster/: CMakeLists.txt  peer_directory.cpp  peer_directory.hpp  raft_link.cpp  raft_link.hpp  raft_receiver.cpp  raft_receiver.hpp  raft_transport.cpp  raft_transport.hpp
src/common/: CMakeLists.txt  base64.cpp  base64.hpp  bytes.cpp  bytes.hpp  compression.cpp  compression.hpp  control_record.cpp  control_record.hpp  crc32c.cpp  crc32c.hpp  error.hpp  fnv1a.hpp  move_only_function.hpp  record.cpp  record.hpp  record_codec.cpp  record_codec.hpp  sha256.cpp  sha256.hpp  task.hpp  types.hpp  varint.cpp  varint.hpp  version.cpp  version.hpp
src/consensus/: CMakeLists.txt  deferred_message_sink.hpp  null_message_sink.hpp  raft_carrier.cpp  raft_carrier.hpp  raft_log.cpp  raft_log.hpp  raft_node.cpp  raft_node.hpp  raft_rpc.cpp  raft_rpc.hpp  raft_state.cpp  raft_state.hpp  raft_state_store.cpp  raft_state_store.hpp  raft_wire.cpp  raft_wire.hpp
src/ffi/: CMakeLists.txt  nexus_ffi.cpp  nexus_ffi.h
src/ingress/: CMakeLists.txt  admin_service.hpp  circuit_breaker.cpp  circuit_breaker.hpp  connection_state.hpp  health_check.hpp  health_monitor.cpp  health_monitor.hpp  http.cpp  http.hpp  json.cpp  json.hpp  json_value.cpp  json_value.hpp  jwt.cpp  jwt.hpp  load_balancer.cpp  load_balancer.hpp  pagination.cpp  pagination.hpp  problem_detail.cpp  problem_detail.hpp  proxy.cpp  proxy.hpp  rate_limiter.hpp  rest_gateway.cpp  rest_gateway.hpp  tls.cpp  tls.hpp  upstream_pool.cpp  upstream_pool.hpp
src/io/: CMakeLists.txt  aligned_buffer.cpp  aligned_buffer.hpp  awaitable.hpp  block_reader.cpp  block_reader.hpp  file.cpp  file.hpp  io_uring_backend.cpp  io_uring_backend.hpp  iocp_backend.cpp  iocp_backend.hpp  proactor.hpp  socket.cpp  socket.hpp
src/kafka/: CMakeLists.txt  codec.cpp  codec.hpp  error_code.hpp  fetch.cpp  fetch.hpp  gateway.cpp  gateway.hpp  list_offsets.cpp  list_offsets.hpp  messages.cpp  messages.hpp  metadata.cpp  metadata.hpp  produce.cpp  produce.hpp  record_batch.cpp  record_batch.hpp
src/protocol/: CMakeLists.txt  codec.cpp  codec.hpp  error_code.cpp  error_code.hpp  frame.cpp  frame.hpp  messages.cpp  messages.hpp  versioning.cpp  versioning.hpp
src/reactor/: CMakeLists.txt  allocator.hpp  cache_line.hpp  cross_core.cpp  cross_core.hpp  cross_core_call.hpp  mpmc_queue.hpp  partition_router.hpp  periodic_timers.cpp  periodic_timers.hpp  reactor.cpp  reactor.hpp  reactor_pool.cpp  reactor_pool.hpp  scheduler.hpp  spsc_queue.hpp  task.hpp
src/server/: CMakeLists.txt  admin_api.cpp  admin_api.hpp  admin_http.cpp  admin_http.hpp  admin_router.cpp  admin_router.hpp  connection.cpp  connection.hpp  daemon_args.cpp  daemon_args.hpp  kafka_adapter.cpp  kafka_adapter.hpp  kafka_connection.hpp  main.cpp  metrics_json.cpp  metrics_json.hpp  server.cpp  server.hpp  sse.cpp  sse.hpp
src/storage/: CMakeLists.txt  fetch_result.hpp  index.cpp  index.hpp  local_storage_tier.cpp  local_storage_tier.hpp  log_compactor.cpp  log_compactor.hpp  log_config.hpp  partition_log.cpp  partition_log.hpp  retention.hpp  segment.cpp  segment.hpp  segment_crypto.cpp  segment_crypto.hpp  storage_tier.cpp  storage_tier.hpp
src/telemetry/: CMakeLists.txt  logging.cpp  logging.hpp  metrics.cpp  metrics.hpp  tracing.cpp  tracing.hpp
src/wire/: CMakeLists.txt  frame_io.cpp  frame_io.hpp
tests/: CMakeLists.txt
tests/crash/: partition_crash_test.cpp
tests/e2e/: admin_http_e2e_test.cpp  broker_e2e_test.cpp  cli_admin_e2e_test.cpp  client_e2e_test.cpp  cluster_e2e_test.cpp  loadgen_e2e_test.cpp  proxy_server_e2e_test.cpp  tls_e2e_test.cpp  tls_server_e2e_test.cpp
tests/sim/: raft_sim.hpp  raft_sim_test.cpp  transaction_sim.hpp  transaction_sim_test.cpp
tests/support/: fake_proactor.hpp  test_certs.hpp
tests/unit/bench/: latency_histogram_test.cpp
tests/unit/broker/: consumer_group_test.cpp  credit_window_test.cpp  group_catalog_test.cpp  group_coordinator_test.cpp  offset_manager_test.cpp  partition_test.cpp  partition_txn_index_test.cpp  producer_session_test.cpp  replicated_partition_test.cpp  request_router_test.cpp  topic_catalog_test.cpp  topic_manager_test.cpp  topic_test.cpp  transaction_coordinator_test.cpp
tests/unit/cli/: cli_options_test.cpp  group_commands_test.cpp  topic_commands_test.cpp
tests/unit/client/: dead_letter_test.cpp
tests/unit/cluster/: peer_directory_test.cpp  raft_link_test.cpp  raft_receiver_test.cpp  raft_transport_loopback_test.cpp  raft_transport_test.cpp
tests/unit/common/: base64_test.cpp  bytes_test.cpp  (+12 more)
tools/bench/: CMakeLists.txt  bench_config.hpp  latency_histogram.hpp  main.cpp
tools/cli/: CMakeLists.txt  admin_client.hpp  admin_commands.cpp  admin_commands.hpp  cli.cpp  cli.hpp  group_commands.cpp  group_commands.hpp  http_admin_client.cpp  http_admin_client.hpp  main.cpp  partition_commands.cpp  partition_commands.hpp  render.hpp  topic_commands.cpp  topic_commands.hpp
tools/loadgen/: CMakeLists.txt  load_generator.cpp  load_generator.hpp  load_schedule.hpp  loadgen_config.hpp  loadgen_report.hpp  main.cpp  produce_runner.cpp  produce_runner.hpp  request_runner.hpp
tools/wincheck/: CMakeLists.txt  main.cpp
(+203 files in other folders)
