# Subsistemas del núcleo. Se añaden a medida que existen (crecen por hito).
add_subdirectory(common)
add_subdirectory(io)
add_subdirectory(storage)
add_subdirectory(protocol)
add_subdirectory(wire)
add_subdirectory(reactor)
add_subdirectory(consensus)
add_subdirectory(telemetry)
add_subdirectory(broker)
add_subdirectory(ingress)
add_subdirectory(client)
add_subdirectory(kafka)
add_subdirectory(server)
